@@ -1,3 +1,8 @@
+2014-04-23  Titus Brown  <titus@idyll.org>
+
+    * scripts/abundance-dist-single.py: fixed problem where ReadParser was
+    being created anew for each thread; regression introduced in 4b823fc.
+
 2014-04-21  Michael R. Crusoe  <mcrusoe@msu.edu>
 
     * setup.py,doc/installing.txt: Remove argparse from the requirements
